--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Putri &amp; Junaidi</h1>
-							<h2>Rabu, 05 Januari 2023</h2>
+							<h2>Rabu, 04 Januari 2023</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a target="_blank" href="https://www.google.com/maps/search/?api=1&query=0.833154,108.908174" class="btn btn-default btn-sm">Petunjuk Arah</a></p>
 						</div>
@@ -102,7 +102,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>ِبِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيْم</h2>
-					<h3>Rabu, 05 Januari 2023</h3>
+					<h3>Rabu, 04 Januari 2023</h3>
 					<p>Assalamu'alaikum Warahmatullahi Wabarakatuh <br>
 						Maha Suci Allah Telah Menciptakan Makhluk-Nya Berpasang-Pasangan, <br>
 						Ya Allah Semoga Ridho-Mu Tercurah Mengiringi <br>
@@ -112,7 +112,7 @@
 			<div class="couple-wrap animate-box">
 				<div class="couple-half">
 					<div class="groom">
-						<img src="images/groom.jpg" alt="groom" class="img-responsive">
+						<img src="images/groom.png" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
 						<h3>Putri Army Kriswanti, S.Pd</h3>
@@ -136,12 +136,12 @@
 	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>Our Special Events</span>
 					<h2>Wedding Events</h2>
 				</div>
-			</div>
+			</div> -->
 			<div class="row">
 				<div class="display-t">
 					<div class="display-tc">
@@ -181,6 +181,8 @@
 									<i class="icon-map-pin"></i>
 									<span>Jl. Raya Pasir Panjang, Gg. A Rais
 									(Samping RINDAM XII TPR)</span>
+									<br>
+									<img src="images/map_address.png" class="img-responsive">
 									<br>
 									<p><a target="_blank" href="https://www.google.com/maps/search/?api=1&query=0.833154,108.908174" class="btn btn-default btn-sm">Petunjuk Arah</a></p>
 								</div>
