--- a/index.html
+++ b/index.html
@@ -370,7 +370,11 @@
       </audio> -->
 
       <div class="modalx" data-sampul="">
-        <div id="fh5co-cover">
+        <div
+          id="fh5co-cover"
+          class="fh5co-bg"
+          style="background-image: url(images/bg-cover.png)"
+        >
           <div class="container">
             <div class="row justify-content-center">
               <div
