--- a/index.html
+++ b/index.html
@@ -249,17 +249,19 @@
             <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
               <h2>Mohon Doa Restu</h2>
               <span
-                >"Baarakallahu laka wa baaraka 'alaika wa iama'a bainakumaa fii
-                khaiir." <br />
-                Semoga Allah memberikan keberkahan untukmu dan atasmu, serta
-                semoda Dia menaumbulkan di antara kalian berdua dalam kebaikan
+                >"Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia
+                menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar
+                kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan
+                di antaramu rasa kasih dan sayang. Sungguh, pada yang demikian
+                itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum
+                yang berpikir."
                 <br />
-                (H.R. At-Tirmidzi)</span
+                (QS. Ar-Ruum:21)</span
               >
             </div>
           </div>
 
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-md-12 animate-box">
               <div
                 class="fh5co-video fh5co-bg"
@@ -271,7 +273,7 @@
                 <div class="overlay"></div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
